

Name: Segue ChangeLog


v. 1.3.0 (the future)
----------------------------------------------------
		
	* Bug Fix: Rating can now be set to zero. The default, NULL, -- set by an empty field -- is &quot;no rating&quot;. (Adam Franco)
		
	* Bug Fix: Public Site Listing now prints next/previous links to additional pages. (Adam Franco)
		
	* New feature: Added error-printing functions to print out backtraces neatly. (Adam Franco)
		
	* New feature: Added Media Library link to text content block UI to allow users to easily add media files to text content blocks in a way that is portable across copies of a site and can be exported from one instance of Segue to another. This Media Library link allows users to easily get urls of Media Library files to copy/paste into HTML or text editors. When text content blocks are saved to database the $cfg[uploadurl] and $sitename portions of Media Library file urls (i.e. entire url except filename) are converted to a placeholder (i.e. unique string). When text content blocks are displayed or edited (i.e. fetched from database), the url placeholder is converted back to actual current media file url (based on current $cfg[uploadurl] and site name. (Alex Chapin)
		
	* New feature: Added a link to the Media Library from text type content block add/edit UI. This allows users to easily get the urls for media in their Media Libraries and copy/paste them into the HTMLArea editor. (Alex Chapin)
		
	* Bug Fix: Fixed bug in media library (filebrowser.php) that prevented getting custom upload limits when called from add content block UI (add_story_form_1_item.inc) (Alex Chapin)
		
	* Change: Link type pages no longer open in new window. (Alex Chapin)
		
	* Change: Link type content blocks no longer print out urls greater than 70 characters but instead truncate their display to avoid stretching their enclosing tables. (Alex Chapin)
		