@@ -2,6 +2,22 @@
 
 <changelog name="Segue ChangeLog">
 	<version number="1.3.0" date="the future">
+		<change author="adam">
+			Changed the way semesters are defined and handled. Segue can now be configured
+			to have as few or many semesters as desired, each with custom start/end
+			days.
+		</change>
+		<important author='adam'>
+			The semester-handling changes involve new config options if upgrading
+			from Segue 1.2.x or earlier.
+		</important>
+		<fix author='adam'>
+			Classes are now ordered by year, semester, and code on the default page.
+		</fix>
+		<fix author='adam'>
+			sites.php now queries the new (as of a year ago) tables when checking
+			for the type of a site.
+		</fix>
 		<fix author='adam'>
 			Rating can now be set to zero. The default, NULL, -- set by an empty field --
 			is "no rating".
