@@ -6,6 +6,14 @@ Name: Segue ChangeLog
 v. 1.3.0 (the future)
 ----------------------------------------------------
 		
+	* Change: Changed the way semesters are defined and handled. Segue can now be configured to have as few or many semesters as desired, each with custom start/end days. (Adam Franco)
+		
+	**** IMPORTANT *** Change: The semester-handling changes involve new config options if upgrading from Segue 1.2.x or earlier. (Adam Franco)
+		
+	* Bug Fix: Classes are now ordered by year, semester, and code on the default page. (Adam Franco)
+		
+	* Bug Fix: sites.php now queries the new (as of a year ago) tables when checking for the type of a site. (Adam Franco)
+		
 	* Bug Fix: Rating can now be set to zero. The default, NULL, -- set by an empty field -- is &quot;no rating&quot;. (Adam Franco)
 		
 	* Bug Fix: Public Site Listing now prints next/previous links to additional pages. (Adam Franco)
